[package]
name = "mrc"
version = "0.1.0"
license.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { path = "../", version = "4", features = ["derive"] }

[build-dependencies]
clap = { path = "../", version = "4", features = ["derive", "cargo", "env"] }
clap_complete = {path = "../clap_complete", version = "4"}
clap_mangen = {path = "../clap_mangen", version = "0.2"}
chrono = {version = "0.4", features = ["serde"] }
serde = "1"
